# ros2openai

./: .gitignore  CMakeLists.txt  README.md  gpt_example.py  package.xml  setup.cfg  setup.py
gptros2/: client_member_function.py  gpt_client.py  gpt_service.py  service_member_function.py
gptros2_interfaces/: CMakeLists.txt  package.xml
ros2openai/: README.md  package.xml  setup.cfg  setup.py  thirdparty.repos
ros2openai/prompts/: 1.yaml
ros2openai/ros2openai/: openai_server.py  openai_simple_client.py
ros2openai/src/: lmstudio.py  openai_client.py  openai_server.py
ros2openai_interfaces/: CMakeLists.txt  README.md  package.xml
ros2openai_interfaces/msg/: OpenAIMessage.msg
ros2openai_interfaces/srv/: OpenAIPrompt.srv
src/: gpt_example.py
tmp/: historic_lm-studio.json  historic_sk-pEsL9Pi5eU7QObmkn1Y2T3BlbkFJv5TbjFx2L3uDQJbfNxqb.json
