<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gptros2</name>
  <version>0.2.0</version>
  <description>TBD</description>
  <maintainer email="rodrigo.perez@urjc.es">rodperex</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  
  <!--depend>add dependencies</depend-->
  

  <!--test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <!build_type>ament_cmake</build_type>
  </export-->
</package>
